# agent-classes

./: .gitignore  CLAUDE.md  LICENSE  README.md  bookkeeper.md  class-template.md  devlead.md  pyproject.toml
.github/workflows/: ci.yml
bookkeeper/: __init__.py  config.py  contracts.py  model.py  orchestrator.py  ports.py
bookkeeper/skills/: __init__.py  categorize.py  close_period.py  flag_anomaly.py  generate_package.py  reconcile.py  track_tax.py
examples/: __init__.py  quickstart.py
jr_analyst/: CHARTER.md  README.md  __init__.py  certainty.py  config.py  model.py  ports.py
jr_analyst/skills/: __init__.py  flag_variance.py  ingest_and_align.py
tests/: analyst_fakes.py  fakes.py  test_analyst_config.py  test_analyst_fakes.py  test_analyst_model.py  test_analyst_ports.py  test_categorize.py  test_certainty.py  test_close_period.py  test_config.py  test_contracts.py  test_flag_anomaly.py  test_flag_variance.py  test_generate_package.py  test_ingest_and_align.py  test_orchestrator.py  test_public_cleanliness.py  test_quickstart_example.py  test_reconcile.py  test_track_tax.py  test_version.py
