[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "bookkeeper"
version = "0.1.0"
description = "The Bessemer Bookkeeper agent-class framework: the adapter-agnostic core (skill ports, the Standing-executor orchestrator with the §5 fail-safe, the §3 config schema, and the Contract A/B interfaces)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["agent", "bookkeeper", "bessemer", "ports-and-adapters", "bounded-autonomy"]
# The framework core is pure standard library (abc, dataclasses, datetime,
# enum, typing). All external dependencies — DB drivers, model clients, OAuth —
# are adapter concerns that live in the private instance repo, never here.
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
packages = ["bookkeeper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
